--- a/src/app/carros/lista/lista.component.html
+++ b/src/app/carros/lista/lista.component.html
@@ -1,3 +1,11 @@
-<p>
-  lista works!
-</p>
+`
+<button (click)="novo()">Novo</button>
+<ul>
+  <li *ngFor="let item of items | async">
+    {{ item.marca }} {{ item.modelo }} {{ item.ano }}
+    <img src="{{ item.imagem_url }}" width="150" height="100">
+    
+    <button (click)="excluir(item.id)">Excluir</button>
+    <button (click)="alterar(item.id)">Alterar</button>
+  </li>
+</ul>`
